@@ -1,3 +1,10 @@
+ORCJAVA-335
+===========
+
+ - Update telnet implementation to use locale independent string
+   case conversions
+
+
 ORCJAVA-334
 ===========
 
